# slumcli

./: .gitignore  AGENTS.md  AI工程学习总手册.md  README.md  pyproject.toml
docs/: 01-overview.md  02-pipeline.md  03-roadmap.md  04-learning-plan.md  05-modules.md  06-development.md  README.md
slumcli/: __init__.py  client.py  context.py  main.py  prompts.py  security.py  tools.py  tracing.py
