[project]
name = "slumcli"
version = "0.1.0"
description = "A terminal coding agent with crypto tools and defense-in-depth security"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
slumcli = "slumcli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["slumcli*"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false
reportUnusedVariable = false
